--- a/src/app/dashboard/home/home/home.component.html
+++ b/src/app/dashboard/home/home/home.component.html
@@ -1,3 +1,6 @@
+<div fxLayout="row" style="margin-top: 20px" fxLayoutAlign="end center">
+  <button mat-raised-button color="primary">Refer a Friend</button>
+</div>
 <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="50px">
   <mat-card fxFlex="45%">
     <mat-card-header fxLayout="column" fxLayoutAlign="center center">
