--- a/src/app/dashboard/layout/top-nav/top-nav.component.html
+++ b/src/app/dashboard/layout/top-nav/top-nav.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" fxLayout="row" fxLayoutGap="10px">
-  <mat-icon (click)="toggleSidebar()">menu</mat-icon>
+  <mat-icon (click)="toggleSidebar()" style="cursor: pointer">menu</mat-icon>
   <mat-icon>dashboard</mat-icon><span>Dashboard</span>
   <div class="spacer"></div>
   <mat-icon>notifications_none</mat-icon>
