--- a/src/app/dashboard/layout/side-nav/side-nav.component.html
+++ b/src/app/dashboard/layout/side-nav/side-nav.component.html
@@ -3,6 +3,10 @@
     <mat-icon mat-list-icon>home</mat-icon>
     <h4 mat-line class="navTitle">Dashboard</h4>
   </mat-list-item>
+  <mat-list-item routerLink="/posts">
+    <mat-icon mat-list-icon>local_post_office</mat-icon>
+    <h4 mat-line class="navTitle">Posts</h4>
+  </mat-list-item>
   <mat-list-item routerLink="/e-wallet">
     <mat-icon mat-list-icon>account_balance_wallet</mat-icon>
     <h4 mat-line class="navTitle">E-Wallet</h4>
